...
    
    var body: some View {
        ZStack {
            VStack {
                Text("Lvl: \(petDataViewModel.pet.getCurrentLevel())")
                    .accessibilityIdentifier("Lvl")
                Text("Exp: \(petDataViewModel.currentSteps)")
                    .accessibilityIdentifier("Exp")
                Text("Next Lvl: \(petDataViewModel.pet.getExpToRaiseNextLevel() - petDataViewModel.currentSteps)")
                    .accessibilityIdentifier("NextLevel")
            }
            if pendingFetch {
                Animation()
...
        }
    }
}

struct PetDataView_Previews: PreviewProvider {
    static var previews: some View {
        PetDataViewFactory().make(pet: Pet(name: "Beldrick", rol: Swordman(), level: Level(currentLevel: 1)))
    }
}

